package com.eduschedule.entity;

import jakarta.persistence.*;
import lombok.*;

@Entity
@Table(
        name = "assignments",
        uniqueConstraints = {@UniqueConstraint(columnNames = {"class_id", "subject_id", "teacher_id"})}
)
@Getter
@Setter
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class Assignment {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "class_id")
    private SchoolClass schoolClass;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "subject_id")
    private Subject subject;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "teacher_id")
    private Teacher teacher;

    @Column(name = "periods_per_week")
    private Integer periodsPerWeek;
}
